# ManipulatorAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ManipulatorAI.docx  README.md  alembic.ini  coverage.xml  dev.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
migrations/: env.py
src/: main.py
src/core/: config.py  database.py  logging_config.py
src/manipulator_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/models/: __init__.py  api.py  conversation.py  product.py
tests/: test_application.py
